syntax = "proto3";

option csharp_namespace = "Backend.Grpc.Proto";

service Hello{
	rpc SayHello(MessageRequest) returns (MessageResponse);
}

message MessageRequest{
	string message = 1;
}

message MessageResponse{
	string message = 1;
}